--- a/Makefile.in
+++ b/Makefile.in
@@ -319,7 +319,7 @@ REMOVE_EMPTY_DIR = @SUBDIRS=;\
 	v=$$(find $(1)/ -type d | tac);\
 	for i in $$v; do rm -d $$i 2>/dev/null; done;
 
-SUBDIRS = kernel boot qlibc init udev shell rash coreutils calc edit \
+SUBDIRS = kernel boot qlibc init rash shell coreutils calc edit \
          media gui winman qonqueror qonsole cpanel quafshot launcher \
          pascal tools
 
