--- a/generic.am
+++ b/generic.am
@@ -25,9 +25,9 @@ AFILES         = $(shell find $(CSD)/lib/     -name "*.a" 2>/dev/null)
 SFILES         = $(shell find $(CSD)/         -name "*.s" 2>/dev/null)
 
 KERNEL_INCLUDE = $(shell find $(TSD)/kernel/include -name "*.h" 2>/dev/null)
-QLIBC_INCLUDE  = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
+LIBC_INCLUDE   = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
 LIBGUI_INCLUDE = $(shell find $(TSD)/gui/include    -name "*.h" 2>/dev/null)
-QLIBC_LIB      = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
+LIBC_LIB       = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
 LIBGUI_LIB     = $(shell find $(TBD)/gui/lib        -name "*.a" 2>/dev/null)
 
 CFLAGS = -fno-stack-protector -fno-exceptions -fno-zero-initialized-in-bss \
