--- a/Makefile.in
+++ b/Makefile.in
@@ -294,9 +294,9 @@ HFILES = $(shell find $(CSD)/include/ -name "*.h" 2>/dev/null)
 AFILES = $(shell find $(CSD)/lib/     -name "*.a" 2>/dev/null)
 SFILES = $(shell find $(CSD)/         -name "*.s" 2>/dev/null)
 KERNEL_INCLUDE = $(shell find $(TSD)/kernel/include -name "*.h" 2>/dev/null)
-QLIBC_INCLUDE = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
+LIBC_INCLUDE = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
 LIBGUI_INCLUDE = $(shell find $(TSD)/gui/include    -name "*.h" 2>/dev/null)
-QLIBC_LIB = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
+LIBC_LIB = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
 LIBGUI_LIB = $(shell find $(TBD)/gui/lib        -name "*.a" 2>/dev/null)
 CFLAGS = -fno-stack-protector -fno-exceptions -fno-zero-initialized-in-bss \
          -ffunction-sections -fno-builtin -Wno-pointer-to-int-cast -Werror \
@@ -319,7 +319,7 @@ REMOVE_EMPTY_DIR = @SUBDIRS=;\
 	v=$$(find $(1)/ -type d | tac);\
 	for i in $$v; do rm -d $$i 2>/dev/null; done;
 
-SUBDIRS = kernel boot qlibc init rash shell coreutils calc edit \
+SUBDIRS = kernel boot qlibc init rash qash coreutils calc edit \
          media gui winman qonqueror qonsole cpanel quafshot launcher \
          pascal tools
 
