--- a/coreutils/Makefile.in
+++ b/coreutils/Makefile.in
@@ -213,9 +213,9 @@ HFILES = $(shell find $(CSD)/include/ -name "*.h" 2>/dev/null)
 AFILES = $(shell find $(CSD)/lib/     -name "*.a" 2>/dev/null)
 SFILES = $(shell find $(CSD)/         -name "*.s" 2>/dev/null)
 KERNEL_INCLUDE = $(shell find $(TSD)/kernel/include -name "*.h" 2>/dev/null)
-QLIBC_INCLUDE = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
+LIBC_INCLUDE = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
 LIBGUI_INCLUDE = $(shell find $(TSD)/gui/include    -name "*.h" 2>/dev/null)
-QLIBC_LIB = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
+LIBC_LIB = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
 LIBGUI_LIB = $(shell find $(TBD)/gui/lib        -name "*.a" 2>/dev/null)
 CFLAGS = -fno-stack-protector -fno-exceptions -fno-zero-initialized-in-bss \
          -ffunction-sections -fno-builtin -Wno-pointer-to-int-cast -Werror \
@@ -482,18 +482,20 @@ readsect: readsect.o
 	$(CC) $(LFLAGS) -o $@ $< $(LIBS)
 
 install-exec-local:
-	$(INSTALL) -D umount   $(OBJECT_PREFIX)/umount
-	$(INSTALL) -D mount    $(OBJECT_PREFIX)/mount
-	$(INSTALL) -D rmdir    $(OBJECT_PREFIX)/rmdir
-	$(INSTALL) -D mkdir    $(OBJECT_PREFIX)/mkdir
-	$(INSTALL) -D rm       $(OBJECT_PREFIX)/rm
-	$(INSTALL) -D unlink   $(OBJECT_PREFIX)/unlink
-	$(INSTALL) -D link     $(OBJECT_PREFIX)/link
-	$(INSTALL) -D mknod    $(OBJECT_PREFIX)/mknod
-	$(INSTALL) -D dir      $(OBJECT_PREFIX)/dir
-	$(INSTALL) -D ls       $(OBJECT_PREFIX)/ls
-	$(INSTALL) -D cat      $(OBJECT_PREFIX)/cat
-	$(INSTALL) -D readsect $(OBJECT_PREFIX)/readsect
+	$(INSTALL) -D umount       $(OBJECT_PREFIX)/umount
+	$(INSTALL) -D mount        $(OBJECT_PREFIX)/mount
+	$(INSTALL) -D rmdir        $(OBJECT_PREFIX)/rmdir
+	$(INSTALL) -D mkdir        $(OBJECT_PREFIX)/mkdir
+	$(INSTALL) -D rm           $(OBJECT_PREFIX)/rm
+	$(INSTALL) -D unlink       $(OBJECT_PREFIX)/unlink
+	$(INSTALL) -D link         $(OBJECT_PREFIX)/link
+	$(INSTALL) -D mknod        $(OBJECT_PREFIX)/mknod
+	$(INSTALL) -D dir          $(OBJECT_PREFIX)/dir
+	$(INSTALL) -D ls           $(OBJECT_PREFIX)/ls
+	$(INSTALL) -D cat          $(OBJECT_PREFIX)/cat
+	$(INSTALL) -D readsect     $(OBJECT_PREFIX)/readsect
+	$(INSTALL) -D $(CSD)/free  $(OBJECT_PREFIX)/free
+	$(INSTALL) -D $(CSD)/lsdev $(OBJECT_PREFIX)/lsdev
 
 uninstall-local:
 	rm -f $(OBJECT_PREFIX)/umount
@@ -508,6 +510,8 @@ uninstall-local:
 	rm -f $(OBJECT_PREFIX)/ls
 	rm -f $(OBJECT_PREFIX)/cat
 	rm -f $(OBJECT_PREFIX)/readsect
+	rm -f $(OBJECT_PREFIX)/free
+	rm -f $(OBJECT_PREFIX)/lsdev
 	- $(call REMOVE_EMPTY_DIR, $(prefix))
 
 all-local: umount mount rmdir mkdir rm unlink link mknod dir ls cat readsect
