--- a/kernel/Makefile.in
+++ b/kernel/Makefile.in
@@ -213,9 +213,9 @@ HFILES = $(shell find $(CSD)/include/ -name "*.h" 2>/dev/null)
 AFILES = $(shell find $(CSD)/lib/     -name "*.a" 2>/dev/null)
 SFILES = $(shell find $(CSD)/         -name "*.s" 2>/dev/null)
 KERNEL_INCLUDE = $(shell find $(TSD)/kernel/include -name "*.h" 2>/dev/null)
-QLIBC_INCLUDE = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
+LIBC_INCLUDE = $(shell find $(TSD)/qlibc/include  -name "*.h" 2>/dev/null)
 LIBGUI_INCLUDE = $(shell find $(TSD)/gui/include    -name "*.h" 2>/dev/null)
-QLIBC_LIB = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
+LIBC_LIB = $(shell find $(TBD)/qlibc/lib      -name "*.a" 2>/dev/null)
 LIBGUI_LIB = $(shell find $(TBD)/gui/lib        -name "*.a" 2>/dev/null)
 CFLAGS = -fno-stack-protector -fno-exceptions -fno-zero-initialized-in-bss \
          -ffunction-sections -fno-builtin -Wno-pointer-to-int-cast -Werror \
@@ -230,7 +230,7 @@ CFLAGS = -fno-stack-protector -fno-exceptions -fno-zero-initialized-in-bss \
 
 LFLAGS = -nostartfiles -nostdlib -nodefaultlibs -m32 -march=i686 \
 	-mtune=generic -pedantic -L$(TBD)/qlibc/lib -L$(TBD)/gui/lib \
-	-Wl,--oformat=binary -Wl,-T$(LDSCRIPT) -Wl,--build-id=none
+	-Wl,-T$(LDSCRIPT) -Wl,--build-id=none
 REMOVE_EMPTY_DIR = @SUBDIRS=;\
 	IFS=$$'\n'; \
 	v=$$(find $(1)/ -type d | tac);\
@@ -239,6 +239,7 @@ REMOVE_EMPTY_DIR = @SUBDIRS=;\
 OBJECT_NAME = kernel
 OBJECT_PREFIX = $(BOOT_DIR)
 LDSCRIPT = $(CSD)/ld/arch32.ld
+BLFLAGS = $(LFLAGS) -Wl,--oformat=binary
 DEPS = $(ALLHFILES) Makefile
 all: all-am
 
@@ -441,7 +442,13 @@ uninstall-libraries:
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(OBJECT_NAME).bin: $(OBJ) $(LDSCRIPT)
-	$(CC) $(LFLAGS) -o $@ $(OBJ) $(LIBS)
+	$(CC) $(BLFLAGS) -o $@ $(OBJ) $(LIBS)
+
+$(OBJECT_NAME).elf: $(OBJ) $(LDSCRIPT)
+	$(CC) $(LFLAGS) -o $(OBJECT_NAME).elf $(OBJ) $(LIBS)
+
+$(OBJECT_NAME).dump: $(OBJECT_NAME).elf
+	objdump -D $< > $@
 
 install-exec-local: install-includes install-libraries
 	$(INSTALL) -D $(OBJECT_NAME).bin $(OBJECT_PREFIX)/$(OBJECT_NAME).bin
@@ -450,10 +457,10 @@ uninstall-local: uninstall-includes uninstall-libraries
 	rm -f $(OBJECT_PREFIX)/$(OBJECT_NAME)
 	- $(call REMOVE_EMPTY_DIR, $(prefix))
 
-all-local: make-dirs $(OBJECT_NAME).bin
+all-local: make-dirs $(OBJECT_NAME).bin $(OBJECT_NAME).dump
 
 clean-local:
-	rm -f $(OBJ) fonts/*.o $(OBJECT_NAME).bin
+	rm -f $(OBJ) fonts/*.o $(OBJECT_NAME).*
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
