--- a/Makefile.in
+++ b/Makefile.in
@@ -834,10 +834,10 @@ isolive: diskimg
 		-input-charset utf-8 -o quafios-2.0.1.iso iso/
 
 qemu-iso: isolive
-	$(top_srcdir)/scripts/qemu.sh d
+	srcdir=$(top_srcdir) $(top_srcdir)/scripts/qemu.sh d
 
 qemu-disk: diskimg
-	$(top_srcdir)/scripts/qemu.sh c
+	srcdir=$(top_srcdir) $(top_srcdir)/scripts/qemu.sh c
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
